5 api done in backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-PORT=3000
-MONGODB_URI="mongodb+srv://<your_username>:<your_password>@<your_cluster_url>/<your_db_name>?retryWrites=true&w=majority"
-DB_NAME="your_db_name"
+PORT=3008
+MONGODB_USERNAME=saakashlh
+MONGODB_PASSWORD=rXbHyVvJwkp6Rthq
+DB_NAME="microservice_user_crud"
