--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /frontend/node_modules
 /backend/package-lock.json
 /frontend/package-lock.json
+/frontend/.next
+/frontend/.*
+
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
